--- a/index.html
+++ b/index.html
@@ -450,6 +450,13 @@
 </div>
 
 
+    <div class="row mx-auto" style="height: 30vh; color:aliceblue;background-color: #222222; text-align: center;vertical-align: auto;align-items: center;">
+      <a href="https://drive.google.com/file/d/1LQSDOzBNoMH2RW75dpSrp3tJxSzeEpd1/view?usp=sharing"><h1 class="mt-5 iconi" style="color: #ffffff; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;" >
+      CV</h1>
+      </a>
+    </div>
+
+
         
 
 <div id="5" class="row mx-auto" style="height: 30vh; color:aliceblue;background-color: #222222; text-align: center;vertical-align: auto;align-items: center;">
