--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
         <div class="container col-1 p-0 ribbonhead mt-3" style="font-size: large; font-weight: 700;color: #3d3d3d;"><a href="#5">Skills</a></div>
         <div class="container col-1 p-0 ribbonhead mt-3" style="font-size: large; font-weight: 700;color: #3d3d3d;"><a href="#5">Services</a></div>
         <div class="container col-1 p-0 ribbonhead mt-3" style="font-size: large; font-weight: 700;color: #3d3d3d;"><a href="#4">Connect</a></div>
+        <div class="container col-1 p-0 ribbonhead mt-3" style="font-size: large; font-weight: 700;color: #3d3d3d;"><a href="https://drive.google.com/file/d/1LQSDOzBNoMH2RW75dpSrp3tJxSzeEpd1/view?usp=sharing">CV</a></div>
     </div>
 
 
@@ -449,15 +450,6 @@
   <hr>
 </div>
 
-
-    <div class="row mx-auto" style="height: 30vh; color:aliceblue;background-color: #222222; text-align: center;vertical-align: auto;align-items: center;">
-      <a href="https://drive.google.com/file/d/1LQSDOzBNoMH2RW75dpSrp3tJxSzeEpd1/view?usp=sharing"><h1 class="mt-5 iconi" style="color: #ffffff; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;" >
-      CV</h1>
-      </a>
-    </div>
-
-
-        
 
 <div id="5" class="row mx-auto" style="height: 30vh; color:aliceblue;background-color: #222222; text-align: center;vertical-align: auto;align-items: center;">
     <h1 class="mt-5" style="color: #ffffff; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;" >
